src/App.css
/* ... */
#patio1 img{
  border-radius: 500px;
  border: none;
  margin: auto;

}


#pets{
  position: absolute;
  top:565px;
  left:14%;
  width:340px;
  height:375px;
  background-color:white;
  border:none;
  outline:none;
  font-size:20px;
}
#pets img{
  border-radius: 500px;
  border: none;
  background:none;
  margin: auto;
}
#pharmacy{
  position: absolute;
  top:565px;
  left:32%;
  width:340px;
  height:375px;
  background-color:white;
  border:none;
  outline:none;
  font-size:20px;
}
#pharmacy img{
  border-radius: 500px;
  border: none;
  background:none;
  margin: auto;
}

#pharmacy1{
  position: absolute;
  top:565px;
  left:50%;
  width:340px;
  height:375px;
  background-color:white;
  border:none;
  outline:none;
  font-size:20px;
}

#pharmacy1 img{
  border-radius: 500px;
  border: none;
  background:none;
  margin: auto;
}

#beauty{
  position: absolute;
  top:565px;
  left:68%;
  width:340px;
  height:375px;
  background-color: white;
  border:none;
  outline:none;
  font-size:20px;
}
#beauty img{
  border-radius: 500px;
  border: none;
  background:none;
  margin: auto;
}
#sports{
  position: absolute;
  top:960px;
  left:14%;
  width:340px;
  height:375px;
  background-color:white;
  border:none;
  outline:none;
  font-size:20px;
}
#sports img{
  border-radius: 500px;
  border: none;
  background:none;
  margin: auto;
}
#auto{
  position: absolute;
  top:960px;
  left:32%;
  width:340px;
  height:375px;
  background-color:white;
  border:none;
  outline:none;
  font-size:20px;

}
#auto img{
  border-radius: 500px;
  border: none;
  background:none;
  margin: auto;
}
#music{
  position: absolute;
  top:960px;
  left:68%;
  width:340px;
  height:375px;
  background-color:white;
  border:none;
  outline:none;
  font-size:20px;
}
#music img{
  border-radius: 500px;
  border: none;
  background:none;
  margin: auto;
}


#music1 {
  position: absolute;
  top:960px;
  left:50%;
  width:340px;
  height:375px;
  background-color:white;
  border:none;
  outline:none;
  font-size:20px;
}
#music1 img{
  border-radius: 500px;
  border: none;
  background:none;
  margin: auto;
}

.letterpic{
  position: absolute;
  top:2900px;
  left:37%;
  border:1px solid black;
  border-radius: 20px;
  width:250px;
  height:150px;
}

#email{
  position:absolute;
  top:60px;
  left:90px;
  width:300px;
  height:35px;
  outline:none;

}
#subscribe{
  position:absolute;
  top:60px;
  left:388px;
  height:35px;
  background-color:black;
  border:none;
  outline:none;
  color:white;
}
.newsletter{
  position: absolute;
  top:2900px;
  left:46%;
}

.site-footer
{
  position:absolute;
  top:3200px;
  width:100%;
  height:430px;
  background-color:#0065ff;
  color:white;
  padding:15px;

}

.titleBox{
  position: relative;
  top: 0px;
  margin-left: 14%;
  width: 700px;
  height:150px;
  background-color: white;
}

.category h1{
  padding-top: 40px;
  padding-left: 15%;
  text-align: left;
  font-size: 30px;
}

.category p{
  text-align: left;
  padding-left: 15%;

}

.site-footer h1{
  position:absolute;
  left:560px;
}

.site-footer h1{
  position:absolute;
  left:45%;
}

.site-footer .footer1 button{
  position:absolute;
  left:21%;
  top:80px;
  width:180px;
  background-color:#0065ff;
  border:none;
  outline:none;
}

.site-footer .footer2 {
  position:absolute;
  top:110px;
  left:37%;
  width:180px;
}
.site-footer .footer2 button{
  width:180px;
  background-color:#0065ff;
  border:none;
  padding:5px 5px;
  outline:none;
}

.site-footer .footer3 {
  position:absolute;
  top:110px;
  left:51%;
  width:180px;
}
.site-footer .footer3 button{
  width:180px;
  background-color:#0065ff;
  border:none;
  padding:5px 5px;
  outline:none;
}

.site-footer .footer4 {
  position:absolute;
  top:110px;
  left:66%;
  width:180px;
}
.site-footer .footer4 button{
  width:180px;
  background-color:#0065ff;
  border:none;
  padding:5px 5px;
  outline:none;
}

.site-footer .footer5 {
  position:absolute;
  top:350px;
  left:15%;
  width:70%;
  text-align:left;
}
.site-footer .footer5 button{
  width:400px;
  background-color:#0065ff;
  border:none;
  padding:5px 5px;
  outline:none;
}

p {
  display: block;
  margin-top: 1em;
  margin-bottom: 1em;
  margin-left: 0;
  margin-right: 0;
}


.fade{
  opacity:1
}
/*
.in-view {
  animation:fade-in;
  animation-fill-mode: forwards;
  animation-duration: 1s;
}
@keyframes fade-in{
    from{
      opacity:0
    }
    to{
      opacity:1
    }
}
*/

